--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 .top-section { 
     height: 100vh;
     width: 100vw;
-    background-image: url(../images/top.png);
+    background-image: url(https://timely.ne.jp/wp/wp-content/uploads/2022/07/g-h7-9.webp);
     background-size: cover;
 }
 
@@ -22,8 +22,8 @@
     /* display: inline; */
     font-size: 4em;
     font-weight: bold;
-    font-family: "游明朝体", "Yu Mincho", YuMincho, serif;
-    color: white;
+    font-family: ", "Yu Mincho", "YuMincho, serif;
+    color: #ffd700;
     text-align: center;
 }
 
