--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,11 @@
 .navbar{
-    background-color:white;
+    background-color:rgb(255, 255, 255);
 }
 
 .top-section { 
     height: 100vh;
     width: 100vw;
-    background-image: url(../images/top.png);
+    background-image: url(https://i.pinimg.com/736x/55/88/9d/55889db6323f816facebf8fc8157fb16.jpg);
     background-size: cover;
 }
 
@@ -23,7 +23,7 @@
     font-size: 4em;
     font-weight: bold;
     font-family: "游明朝体", "Yu Mincho", YuMincho, serif;
-    color: white;
+    color: rgb(149, 255, 0);
     text-align: center;
 }
 
