--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,11 @@
 .navbar{
-    background-color:white;
+    background-color:rgb(255, 255, 255);
 }
 
 .top-section { 
     height: 100vh;
     width: 100vw;
-    background-image: url(../images/top.png);
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_cgEeFLOr2y79i3mhMm6dcT5gypwNUJSaFQ&usqp=CAU);
     background-size: cover;
 }
 
@@ -23,7 +23,7 @@
     font-size: 4em;
     font-weight: bold;
     font-family: "游明朝体", "Yu Mincho", YuMincho, serif;
-    color: white;
+    color: rgb(26, 155, 180);
     text-align: center;
 }
 
