--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 .top-section { 
     height: 100vh;
     width: 100vw;
-    background-image: url(../images/top.png);
+    background-image: url(http://www.hoiku-r.com/plus/wp-content/uploads/2016/02/44.png);
     background-size: cover;
 }
 
@@ -23,7 +23,7 @@
     font-size: 4em;
     font-weight: bold;
     font-family: "游明朝体", "Yu Mincho", YuMincho, serif;
-    color: white;
+    color: rgb(250, 70, 20);
     text-align: center;
 }
 
