--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 .top-section { 
     height: 100vh;
     width: 100vw;
-    background-image: url(../images/top.png);
+    background-image: url(https://pbs.twimg.com/media/E7_AnxlVkAApYns?format=jpg&name=large);
     background-size: cover;
 }
 
