--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 .top-section { 
     height: 100vh;
     width: 100vw;
-    background-image: url(../images/top.png);
+    background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fentabe.jp%2F52957%2Fstarbucks-opera-frappuccino&psig=AOvVaw15fKv1Lc9q5EO0x0AgAyyI&ust=1676015018055000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCLCcoND4h_0CFQAAAAAdAAAAABAD);
     background-size: cover;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .content-section { 
-    background-color: #3cbf49;
+    background-color: #0ac0f3;
 }
 
 .content-section .container { 
