--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,12 +23,12 @@
     font-size: 4em;
     font-weight: bold;
     font-family: "游明朝体", "Yu Mincho", YuMincho, serif;
-    color: rgb(250, 70, 20);
+    color: rgb(250, 30, 30);
     text-align: center;
 }
 
 .content-section { 
-    background-color: #3cbf49;
+    background-color: #275cd6;
 }
 
 .content-section .container { 
