--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 .top-section { 
     height: 100vh;
     width: 100vw;
-    background-image: url(../images/top.png);
+    background-image: url(https://i.pinimg.com/originals/2b/88/ef/2b88ef2d0ce745303a67db010f0c369d.jpg);
     background-size: cover;
 }
 
@@ -22,13 +22,13 @@
     /* display: inline; */
     font-size: 4em;
     font-weight: bold;
-    font-family: "游明朝体", "Yu Mincho", YuMincho, serif;
-    color: white;
+    font-family: "MS Pゴシック体", "Yu Mincho", YuMincho, serif;
+    color: rgb(4, 4, 125);
     text-align: center;
 }
 
 .content-section { 
-    background-color: #3cbf49;
+    background-color: rgb(4, 4, 125);
 }
 
 .content-section .container { 
